<resources>
    <string name="app_name">Currency Converter</string>
    <string name="getting_rates">Getting rates...</string>
    <string name="please_wait_while_application_is_loading">Please wait while application is loading…</string>
    <string name="usd">USD</string>
    <string name="enter_to_convert">Enter to convert</string>
    <string name="pkr">PKR</string>
    <string name="_0_0">0.0</string>
    <string name="output">Output</string>
    <string name="country_name">Country Name</string>
    <string name="select_currency">Select Currency</string>
    <string name="search_currency">Search in currencies</string>
    <string name="apply">Apply</string>
    <string name="try_again">Try Again</string>
    <string name="something_goes_wrong">Something goes wrong</string>
    <string name="restart">Restart</string>
    <string name="update_just_downloaded">Update downloaded. Please click Restart button to apply changes.</string>
</resources>