<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.CountriesActivity">

    <View
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/selectedColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@id/actionBar"
        app:layout_constraintStart_toStartOf="@id/actionBar"
        app:layout_constraintTop_toTopOf="@id/actionBar"
        app:srcCompat="@drawable/baseline_arrow_back_ios_new_24"
        app:tint="@color/white" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ivMainBg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/select_currency"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/actionBar"
        app:layout_constraintEnd_toEndOf="@id/actionBar"
        app:layout_constraintStart_toEndOf="@id/backArrow"
        app:layout_constraintTop_toTopOf="@id/actionBar" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvEtSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionBar"
        app:strokeColor="@color/unSelectedColor"
        app:strokeWidth="0dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:gravity="start"
            android:hint="@string/search_currency"
            android:inputType="textVisiblePassword"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCountries"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvEtSearch"
        tools:listitem="@layout/row_countries" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/apply"
        android:textColor="?attr/selectedColor"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="@id/actionBar"
        app:layout_constraintEnd_toEndOf="@id/actionBar"
        app:layout_constraintTop_toTopOf="@id/actionBar" />
</androidx.constraintlayout.widget.ConstraintLayout>