<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">

    <View
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/selectedColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ivMainBg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/actionBar"
        app:layout_constraintEnd_toEndOf="@id/actionBar"
        app:layout_constraintStart_toStartOf="@id/actionBar"
        app:layout_constraintTop_toTopOf="@id/actionBar" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionBar"
        app:strokeWidth="0dp">

        <LinearLayout
            android:id="@+id/llCurrency"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvFromCurrency"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_50sdp"
                    app:cardElevation="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="?attr/selectedColor"
                    app:strokeWidth="@dimen/_1sdp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvFromCurrency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/usd"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvEtFromCurrency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="@id/cvFromCurrency"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cvFromCurrency"
                    app:layout_constraintTop_toTopOf="@id/cvFromCurrency"
                    app:strokeColor="@color/unSelectedColor"
                    app:strokeWidth="@dimen/_1sdp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etFromCurrency"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:gravity="start"
                        android:hint="@string/enter_to_convert"
                        android:inputType="numberDecimal"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />
                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvConversionCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_50sdp"
                app:cardElevation="@dimen/_5sdp"
                app:contentPadding="@dimen/_10sdp"
                app:strokeColor="@color/unSelectedColor"
                app:strokeWidth="0dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_2sdp"
                    app:srcCompat="@drawable/icon_conversion" />

            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvToCurrency"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_50sdp"
                    app:cardElevation="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="?attr/selectedColor"
                    app:strokeWidth="@dimen/_1sdp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvToCurrency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/pkr"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvEtToCurrency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="@id/cvToCurrency"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cvToCurrency"
                    app:layout_constraintTop_toTopOf="@id/cvToCurrency"
                    app:strokeColor="@color/unSelectedColor"
                    app:strokeWidth="@dimen/_1sdp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etToCurrency"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:gravity="start"
                        android:hint="@string/output"
                        android:inputType="numberDecimal"
                        android:enabled="false"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />
                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/perUnitPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10ssp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/app_name"
                android:textColor="#6C6666"
                android:textSize="@dimen/_8ssp"
                android:visibility="invisible" />

        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieLoading"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading" />
    </com.google.android.material.card.MaterialCardView>

    <include
        android:id="@+id/errorLayout"
        layout="@layout/error_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionBar" />

</androidx.constraintlayout.widget.ConstraintLayout>